# Protein-Design-MCP

./: CITATION.cff  NOTICE  README.md  claude_desktop_config.json  pyproject.toml  uv.toml
claude-skills/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
claude-skills/.claude-plugin/: marketplace.json  plugin.json
claude-skills/engines/apple/: README.md
claude-skills/engines/react-three-fiber/: README.md
claude-skills/engines/unigine-2/: README.md
claude-skills/engines/unigine-2-sim/: README.md
claude-skills/engines/web-threejs/: README.md
claude-skills/integrations/: README.md
claude-skills/integrations/nvidia-omniverse/: README.md
claude-skills/skills/apple-spatial-designer/: SKILL.md
claude-skills/skills/bionemo-agent-toolkit/: README.md  SKILL.md
claude-skills/skills/bionemo-agent-toolkit/references/: alphafold3_mcp.md  api_reference.md
claude-skills/skills/bionemo-agent-toolkit/scripts/: bionemo_client.py  smoke_test.py
claude-skills/skills/digital-twin-builder/: SKILL.md
claude-skills/skills/game-designer/: SKILL.md
claude-skills/skills/game-designer/references/: uag_schema.md
claude-skills/skills/game-designer/scripts/: uag_validate.py
claude-skills/skills/meor/evals/: eval_set.json
claude-skills/skills/mining/evals/: eval_set.json
claude-skills/skills/oilgas/evals/: eval_set.json
claude-skills/skills/openusd-architect/: SKILL.md
claude-skills/skills/plant-growth/: SKILL.md
claude-skills/skills/prospecting/evals/: eval_set.json
claude-skills/skills/quantum/evals/: eval_set.json
claude-skills/skills/quantum/references/: model_documentation.md
claude-skills/skills/quantum/scripts/: test_cvar_vqe.py  vqe_simulator.py
claude-skills/skills/scene-export/: README.md  SKILL.md
claude-skills/skills/scene-export/evals/: eval_set.json  run_tests.py
claude-skills/skills/scene-export/references/: engine_notes.md  scene_plan_reference.md
claude-skills/skills/scene-export/scripts/: export_gltf.py  export_godot_gdscript.py  export_obj.py  export_threejs.py  scene_plan.py
claude-skills/skills/threejs-web-designer/: SKILL.md
claude-skills/skills/unigine-simulation-engineer/: SKILL.md
claude-skills/skills/unity-experience-builder/: SKILL.md
claude-skills/skills/unreal-world-builder/: SKILL.md
src/protein_design_mcp/: exceptions.py  server.py  setup_cli.py  uag_exporter.py
src/protein_design_mcp/pipelines/: esm2_scorer.py  esmfold.py  quantum_runner.py  zairachem_runner.py
src/protein_design_mcp/tools/: predict_admet_profile.py  predict_bioactivity.py  predict_peptide_quantum_vqe.py  predict_structure_quantum_walk.py  train_qsar_model.py
tests/: test_cpu_mcp.py  test_fair_esm_tranformers.py  test_hf_esm2_scorer.py
